--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 </head>
 <body>
   <h1>VOID is Live</h1>
-  <p>Firebase is connected successfully.</p>
+  <p>...connected successfully.</p>
 </body>
 </html>
