--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Void Global Chat</title>
   <style>
     body {
@@ -16,42 +16,37 @@
     }
 
     header {
-      padding: 10px;
+      padding: 20px;
       text-align: center;
       background-color: #111;
-      font-size: 24px;
+      font-size: 28px;
       font-weight: bold;
       border-bottom: 1px solid #444;
     }
 
-    #chat {
-      flex: 1;
-      overflow-y: auto;
-      padding: 10px;
-    }
-
-    .message {
-      margin: 5px 0;
-      padding: 5px 10px;
-      border-radius: 5px;
-      background-color: #222;
-    }
-
-    .system {
-      color: #4da6ff;
+    #subtitle {
+      text-align: center;
+      font-size: 20px;
+      margin-top: 10px;
+      color: #aaa;
     }
 
     #inputContainer {
       display: flex;
-      border-top: 1px solid #444;
+      justify-content: center;
+      padding: 10px;
+      background-color: #111;
+      border-bottom: 1px solid #333;
     }
 
     #messageInput {
-      flex: 1;
+      width: 60%;
       padding: 10px;
-      border: none;
+      border: 1px solid #333;
+      border-radius: 4px;
       background-color: #111;
       color: white;
+      margin-right: 10px;
     }
 
     #sendButton {
@@ -60,26 +55,49 @@
       background-color: #333;
       color: white;
       cursor: pointer;
+      border-radius: 4px;
     }
 
     #sendButton:hover {
       background-color: #555;
     }
+
+    #chat {
+      flex: 1;
+      overflow-y: auto;
+      padding: 10px 20px;
+    }
+
+    .message {
+      margin: 5px 0;
+      padding: 8px 12px;
+      border-radius: 5px;
+      background-color: #222;
+    }
+
+    .system {
+      color: #4da6ff;
+    }
   </style>
+
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-database-compat.js"></script>
 </head>
 <body>
+
   <header>VOID — Global Chat</header>
-  <div id="chat"></div>
+  <div id="subtitle">Say something in the void...</div>
+
   <div id="inputContainer">
-    <input type="text" id="messageInput" placeholder="Speak into the void..." />
+    <input type="text" id="messageInput" placeholder="Your message..." />
     <button id="sendButton">Send</button>
   </div>
 
+  <div id="chat"></div>
+
   <script>
-    // Firebase config for void-d9ec4
+    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyClW4zHDde1rQm6RkHQcD2rM0sklBBgdrM",
       authDomain: "void-d9ec4.firebaseapp.com",
@@ -133,9 +151,9 @@
       }, 60000 - age);
     });
 
-    // Remove from DOM when deleted
+    // Refresh chat on message removal
     db.ref("voidMessages").on("child_removed", () => {
-      chatDiv.innerHTML = ""; // Reload all messages
+      chatDiv.innerHTML = "";
     });
 
     // System message every 2 minutes
@@ -157,7 +175,7 @@
       db.ref("voidMessages").push(msg);
     }
 
-    setInterval(sendSystemMessage, 120000); // Every 2 minutes
+    setInterval(sendSystemMessage, 120000);
   </script>
 </body>
 </html>
